--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 <body>
 
-  <!-- ========== HEADER DAN FOTO PROFIL ========== -->
+  <!-- Header & Foto Profil -->
   <div class="container text-center mt-5">
     <img src="images/profil.jpg" alt="Foto Profil" class="profile-img" />
     <h1 class="mt-2">Novan Frido Saputro</h1>
     <p class="text-center">IT System Administrator | Linux & Virtualization Enthusiast</p>
   </div>
 
-  <!-- ========== DESKRIPSI DIRI DAN SKILLS ========== -->
+  <!-- Bagian Pertama -->
   <div class="container mt-5">
     <div class="row">
-      <!-- Deskripsi Diri -->
+      <!-- About Me -->
       <div class="col-md-6">
         <h3>About Me</h3>
         <p style="text-align: justify;">
@@ -32,7 +32,7 @@
         </p>
       </div>
 
-      <!-- Skills List -->
+      <!-- Skills -->
       <div class="col-md-6">
         <h3>Skills</h3>
         <ul style="text-align: justify;">
@@ -47,10 +47,10 @@
     </div>
   </div>
 
-  <!-- ========== TECHNICAL SKILLS DAN PENGALAMAN ========== -->
+  <!-- Bagian ke dua -->
   <div class="container mt-5">
     <div class="row">
-      <!-- Logo Skill OS -->
+      <!-- Tools yang di pakai -->
       <div class="col-md-6">
         <h3 class=>Technical Tools</h3>
         <div class="skill-grid">
@@ -78,7 +78,7 @@
     </div>
   </div>
 
-  <!-- ========== KONTAK DAN EDUKASI ========== -->
+  <!-- Bagian ke tiga -->
   <div class="container mt-5">
     <div class="row">
       <!-- Kontak -->
@@ -125,7 +125,7 @@
     </div>
   </div>
 
-<!-- ========== QUOTE ========== -->
+<!-- Pedoman Hidup -->
   <div class="container d-flex justify-content-center align-items-center flex-column quote">
     <p><strong>The Braver You Are, The More You Can Achieve</strong></p>
     <p><em>~ Benjamin Engel ~</em></p>
