--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
         <table class="table">
           <tr>
             <td><img src="images/email.png" class="icon" alt="Email" /></td>
-            <td><a href="mailto:novanfs212@gmail.com">novanfs212@gmail.com</a></td>
+            <td>
+              <a href="https://mail.google.com/mail/?view=cm&fs=1&to=novanfs212@gmail.com" target="_blank">
+                novanfs212@gmail.com
+              </a>
+            </td>
           </tr>
           <tr>
             <td><img src="images/linkedin.png" class="icon" alt="LinkedIn" /></td>
@@ -95,7 +99,7 @@
           </tr>
           <tr>
             <td><img src="images/instagram.png" class="icon" alt="Instagram" /></td>
-            <td><a href="https://instagram.com/novanfrs" target="_blank">@novanfrs</a></td>
+            <td><a href="https://instagram.com/novanfrs" target="_blank">instagram.com/novanfrs/</a></td>
           </tr>
         </table>
       </div>
